--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,10 +4,22 @@
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
-
+@custom-variant dark (&:where(.dark, .dark *));
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+@font-face {
+    font-family: vasir;
+    font-style: normal;
+    font-weight: 200 700;
+    font-display: swap;
+    src: url("../../public/vasir.woff2") format("woff2");
+}
+
+@theme {
+    --font-display: "vasir";
 }
 
 @keyframes slide {
